# ytb-mp3

./: .gitignore  artist.py  cli.py  download.py  pyproject.toml  search.py  test_scenarios.py
core/: artist.py  download.py  search.py
core/artifact/: path.yml  utils.py
test/: test_artist_search.py  test_search_youtube.py
tests/: test_artist_search.py
