[tool.poetry]
name = "ytb-mp3"
version = "0.1.0"
description = ""
authors = ["tagliani <gabriel.tagliani@compasso.com.br>"]
readme = "README.md"
packages = [{include = "ytb_mp3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
